force-app/main/default/force-app/main/default/objects/ARMT_MappingRegistry__c/ARMT_MappingRegistry__c.object-meta.xml
<CustomObject>
    <label>ARMT Mapping Registry</label>
    <pluralLabel>ARMT Mapping Registries</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Stores source-to-target field mappings and confidence scores.</description>
</CustomObject>