force-app/main/default/force-app/main/default/objects/ARMT_MappingRegistry__c/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>Confidence Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Stores the mapping confidence score.</description>
</CustomField>