force-app/main/default/force-app/main/default/objects/ARMT_MappingRegistry__c/fields/SourceFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>SourceFieldAPI__c</fullName>
    <label>Source Field API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Stores the source field API name for a mapping record.</description>
</CustomField>