force-app/main/default/force-app/main/default/objects/ARMT_MappingRegistry__c/fields/TargetFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>TargetFieldAPI__c</fullName>
    <label>Target Field API Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Stores the target field API name for a mapping record.</description>
</CustomField>